--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.3",
     "react": "17.0.1",
+    "react-devtools": "<4.11.0",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
