--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "react-devtools": "<4.11.0",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "2.3.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.2.3",
-    "yup": "^0.32.9"
+    "yup": "0.28.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
