--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.2.3",
     "yup": "0.28.4"
